<resources>
    <string name="app_name">Project Manager</string>
    <string name="cerca_progetti">Cerca progetti</string>
    <string name="valuta">Valuta</string>
    <string name="conclusi">Conclusi</string>
    <string name="tutti">Tutti</string>
    <string name="inCorso">In Corso</string>
    <string name="libro">Libro</string>
    <string name="add">Aggiungi</string>
    <string name="user">User</string>
    <string name="login">Accedi</string>
    <string name="signin">Iscriviti</string>
    <string name="scadenza">SCADENZA</string>
    <string name="progressi">AVANZAMENTO</string>
    <string name="leader">Leader</string>
    <string name="nuovo">NUOVO</string>
    <string name="task">TASK</string>
    <string name="select_profile_image">Seleziona immagine profilo</string>
    <string name="welcome_to">Benvenuto in</string>
    <string name="project_manager">Project Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="completati">Completati</string>
    <string name="in_corso">In Corso</string>
    <string name="priorita">Priorità</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="bassa">Bassa</string>
    <string name="applica_filtri">Applica Filtri</string>
    <string name="seleziona_data">Seleziona data</string>
    <string name="rimuovi_data">Rimuovi data</string>
    <string name="nessuna_data_selezionata">Nessuna data selezionata</string>
    <string name="scadenza_prima_del">Scadenza prima del</string>
    <string name="msg_token_fmt" >Token recuperato %s</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="scrivi_un_messaggio">Scrivi un messaggio...</string>
    <string name="invia_messaggio">Invia messaggio</string>
    <string name="developer">Developer</string>
    <string name="stato">Stato</string>
    <string name="start_new_chat">Inizia Nuova Chat</string>
    <string name="username">Nome Utente</string>
    <string name="priorit_alta">Priorità: Alta</string>
    <string name="salva">Salva</string>
    <string name="project_name">Nome Progetto</string>
    <string name="menu">Menu</string>
    <string name="crearto_da">CREARTO DA</string>
    <string name="assegnato_a">ASSEGNATO A</string>
    <string name="nessun_task_da_visualizzare">Nessun task da visualizzare</string>
    <string name="filter_tasks">Filtra Task</string>
    <string name="save_progress">Salva Progresso</string>
    <string name="sollecita">sollecita</string>
    <string name="voto">Voto</string>
    <string name="commento">Commento</string>
    <string name="scadenza_oltre_il">Scadenza oltre il</string>
    <string name="statistics">Statistiche</string>
    <string name="completed">Completati</string>
    <string name="active">Attivi</string>
    <string name="not_started">Non Iniziati</string>
    <string name="average_completion_time">Tempo Medio Completamento</string>
    <string name="project_task_distribution">Progetti/Task Distribuzione</string>
    <string name="name">Nome</string>
    <string name="role">Ruolo</string>
    <string name="logout">Esci</string>
    <string name="quanto_sei_soddisfatto">Quanto sei soddisfatto?</string>
    <string name="inserisci_un_commento">Inserisci un commento</string>
    <string name="esempio_messaggio">esempio messaggio</string>
    <string name="download">Scarica</string>
    <string name="visualizza_task">Visualizza Task</string>
    <string name="modifica_progresso">MODIFICA PROGRESSO</string>
    <string name="creato_da">CREATO DA</string>
    <string name="assegnato_a_">ASSEGNATO A</string>
    <string name="aggiungi_valutazione">aggiungi valutazione</string>
    <string name="visualizza_documenti">Visualizza Documenti</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati</string>
    <string name="inserisci_la_mail">Inserisci la mail</string>
    <string name="inserisci_la_password">Inserisci la password</string>
    <string name="password_o_email_non_corretti">Password o email non corretti</string>
    <string name="seleziona_ruolo">Seleziona ruolo</string>
    <string name="inserisci_un_nome">Inserisci un nome</string>
    <string name="inserisci_un_cognome">Inserisci un cognome</string>
    <string name="ruolo">Ruolo</string>
    <string name="inserire_il_ruolo">Inserire il ruolo</string>
    <string name="inserire_una_email">Inserire una email</string>
    <string name="inserire_una_password">inserire una password</string>
    <string name="inserire_nuovamente_la_password">Inserire nuovamente la password</string>
    <string name="inserire_immagine_profilo">Inserire immagine profilo</string>
    <string name="registrazione">Registrazione</string>
    <string name="nuovo_progetto">Nuovo Progetto</string>
    <string name="priorit">Priorità</string>
    <string name="salva_up">SALVA</string>
    <string name="new_task">NUOVO TASK</string>
    <string name="new_subtask">NUOVO SOTTOTASK</string>
    <string name="inserire_un_titolo">Inserire un titolo</string>
    <string name="inserire_una_descrizione">Inserire una descrizione</string>
    <string name="selezionare_il_ruolo">Selezionare il ruolo</string>
    <string name="selezionare_la_data">Selezionare la data</string>
    <string name="selezionare_la_priorit">Selezionare la priorità</string>
    <string name="skills">Competenze</string>
    <string name="progetti">Progetti</string>
    <string name="chat">Chat</string>
    <string name="profilo">Profilo</string>
    <string name="dettagli">Dettagli</string>
    <string name="sotto_item">Sottoitem</string>
    <string name="file">File</string>
    <string name="modifica_progetto">Modifica Progetto</string>
    <string name="modifica_task">Modifica Task</string>
    <string name="modifica_subtask">Modifica Subtask</string>
    <string name="pessimo">Pessimo</string>
    <string name="molto_scarso">Molto scarso</string>
    <string name="scarso">Scarso</string>
    <string name="mediocre">Mediocre</string>
    <string name="sufficiente">Sufficiente</string>
    <string name="discreto">Discreto</string>
    <string name="buono">Buono</string>
    <string name="molto_buono">Molto buono</string>
    <string name="ottimo">Ottimo</string>
    <string name="eccellente">Eccellente</string>
    <string name="non_valutato">Non valutato</string>
</resources>
