<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <!-- Barra superiore con il nome dell'applicazione -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cadetblue"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:gravity="center" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/cadetblue"
        android:text="@string/login"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_signin"
        android:layout_marginLeft="85dp"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/cadetblue"
        android:textColor="@color/black"
        android:text="@string/signin" />

</LinearLayout>